# smart-erp

./: .gitignore  PUD.docx  README.md  README_RC1.md  docker-compose.yml  package-lock.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  exceptions.py  logging_config.py  security.py
backend/migrations/: env.py
backend/migrations/versions/: 180faf0450cb_create_auth_and_company_tables.py  182bd93750f1_add_company_details_and_financial_year.py  307fd2c32f88_add_inventory_transaction_model.py  38084e22fae1_add_warehouses_and_stock_balances.py  42248758367c_add_voucher_models.py  4e9178c62200_add_billing_models.py  666e6cfbd62b_add_banking_models_and_ledger_type.py  6ded4c4acc82_add_fy_closing_models.py  7057ba6e0177_add_inventory_masters_models.py  733b3dedeac2_add_team_management_models.py  844dec4d1f2a_adjust_auth_models_for_step_3.py  856951d24c7b_add_stock_transfer_models.py  856fcf11cfb1_add_party_model.py  8e9ce06698a7_add_audit_log_model.py  9addf21aed7a_add_search_document_model.py  b83eabde7d7f_add_stock_adjustment_models.py  c844bccb6d2e_add_initial_masters_models.py  caa24718bf55_add_audit_to_voucher_submodels.py  cbe8afc3d0fc_add_warehouse_to_invoice_items.py  (+2 more)
backend/scripts/: audit_db_integrity.py  audit_integrity.py  check_demo_user.py  clear_data.py  generate_demo_company.py  seed_demo_data.py  simulate_business.py  verify_login.py  wipe_data.py
backend/tests/: conftest.py
backend/verification/: final-verification-report.md
frontend/: Dockerfile  (+2 more)
(+284 files in other folders)
